--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,8 @@
               "src/assets"
             ],
             "styles": [
+                "node_modules/bootstrap/dist/css/bootstrap.min.css",
+  "styles.scss",
               "src/styles.css"
             ],
             "scripts": []
@@ -90,6 +92,8 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "styles.scss",
               "src/styles.css"
             ],
             "scripts": []
